# mta-v800

./: .gitignore  .gitmodules  .npmrc  .nxignore  COMMIT  Dockerfile.fastapi  Dockerfile.fastify  LICENSE  Makefile  Makefile.docker  Makefile.fastapi  Makefile.fastify  Makefile.gitmodule  Makefile.pip  Makefile.pipx  Makefile.poetry  Makefile.pytest  Makefile.tools  README.md  biome.json  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.bin/: build-standalone-wheel.py  ci-install.sh  ci-unzip-and-run.sh  clean-port-51000.sh  clean-port-52000.sh  clean-ports.sh  clean_git_unused_files.py  debug-print-test-directories  dev-parallel.sh  find-sensitive-test-data.py  fix_pytest_test_namespaces.py  git-add-module_packages  git-hook-setup.sh  git-module-create-stage  healthz-check.sh  mta-sync  parse_npm_build_errors.mjs  parse_pnpm_build_errors.py  parse_pytest_build_errors.py  pyproject-remove-readme-line.sh  pyproject-sync-constraints.py  pyproject-sync-pkg-repo.py  pyproject-sync-pkg-root.py  python-linting.py  python_pip_find_safe_version.py  scan-secrets.sh  setup-pythonpath-docker.sh  setup-pythonpath.py  setup-pythonpath.sh  sync-dockerfile-pythonpath.py  sync-internal.sh  sync-subpackage-versions.py  ts-apply-noImplicitAny.sh  verify_db_config.sh
common/config/: COMMIT  base.yml  cors.json  server.dev.yaml
fastapi_server/: pyproject.toml
fastapi_server/app/: logger.py  main.py  print_routes.py  server.py
fastapi_server/config/environment/: 01_vault_file.py
fastapi_server/config/lifecycle/: 01_app_yaml.py  02_context_resolver.py
fastapi_server/routes/: health_route.py  healthz_app_yaml_static_config_route.py  healthz_overwrite_from_context_route.py  healthz_vault_file_route.py  home_route.py
fastify_server/: package.json
fastify_server/routes/: health_route.mjs  healthz_app_yaml_static_config_route.mjs  healthz_overwrite_from_context_route.mjs  healthz_vault_file_route.mjs  home_route.mjs
fastify_server/src/: logger.mjs  main.mjs  print_routes.mjs  server.mjs
polyglot/app_yaml_overwrites/: Makefile
polyglot/app_yaml_overwrites/py/: pyproject.toml
polyglot/app_yaml_overwrites/py/__tests__/: __init__.py  conftest.py  test_context_builder.py  test_logger.py  test_overwrite_merger.py  test_sdk.py
polyglot/app_yaml_overwrites/py/docs/: API_REFERENCE.md  README.md
polyglot/app_yaml_overwrites/py/examples/: Makefile  basic_usage.py
polyglot/app_yaml_overwrites/py/examples/fastapi_app/: __init__.py  main.py
polyglot/app_yaml_overwrites/py/src/app_yaml_overwrites/: __init__.py  cli.py  context_builder.py  logger.py  overwrite_merger.py  sdk.py
polyglot/app_yaml_static_config/: Makefile
polyglot/app_yaml_static_config/py/: README.md  pyproject.toml
polyglot/app_yaml_static_config/py/__tests__/: conftest.py  test_api_integration.py  test_core.py  test_logger.py  test_sdk.py  test_validators.py
polyglot/app_yaml_static_config/py/docs/: API_REFERENCE.md  SDK_GUIDE.md  SERVER_INTEGRATION.md
polyglot/app_yaml_static_config/py/examples/: Makefile  basic_usage.py
polyglot/app_yaml_static_config/py/examples/fastapi_app/: main.py
polyglot/app_yaml_static_config/py/src/app_yaml_static_config/: __init__.py  core.py  logger.py  sdk.py  types.py  validators.py
polyglot/overwrite_from_context/: Makefile
polyglot/overwrite_from_context/py/: README.md  pyproject.toml
polyglot/overwrite_from_context/py/__tests__/: conftest.py  test_compute_registry.py  test_context_resolver.py  test_fastapi_integration.py  test_security.py
polyglot/overwrite_from_context/py/docs/: API_REFERENCE.md
polyglot/overwrite_from_context/py/examples/: Makefile  basic_usage.py
polyglot/overwrite_from_context/py/examples/fastapi_app/: __init__.py  main.py
polyglot/overwrite_from_context/py/src/runtime_template_resolver/: __init__.py  compute_registry.py  context_resolver.py  errors.py  logger.py  options.py  sdk.py  security.py  types.py
polyglot/overwrite_from_context/py/src/runtime_template_resolver/integrations/: __init__.py  fastapi.py
polyglot/overwrite_from_context/py/tests/: test_resolver.py
polyglot/runtime_template_resolver/py/: pyproject.toml
polyglot/runtime_template_resolver/py/docs/: API_REFERENCE.md  SDK_GUIDE.md  SERVER_INTEGRATION.md
polyglot/runtime_template_resolver/py/examples/: Makefile  basic_usage.py
polyglot/runtime_template_resolver/py/examples/fastapi_app/: __init__.py  main.py
polyglot/runtime_template_resolver/py/src/runtime_template_resolver/: __init__.py  batch.py  coercion.py  compiler.py  compute_registry.py  context_resolver.py  errors.py  extractor.py  interfaces.py  logger.py  missing_handler.py  path_parser.py  resolver.py  sdk.py  validator.py
polyglot/runtime_template_resolver/py/src/runtime_template_resolver/integrations/: fastapi_utils.py
polyglot/runtime_template_resolver/py/tests/: __init__.py  conftest.py  test_api.py  test_compute_registry.py  test_context_resolver.py  test_resolver.py  test_sdk.py
polyglot/server/: Makefile
polyglot/server/py/: pyproject.toml
polyglot/server/py/__tests__/: conftest.py  test_api.py  test_logger.py  test_server.py
polyglot/server/py/app/: main.py  server.py
polyglot/server/py/docs/: API_REFERENCE.md  SERVER_INTEGRATION.md
polyglot/server/py/examples/: Makefile  basic_usage.py
polyglot/server/py/examples/fastapi_app/: main.py
polyglot/server/py/polyglot_server/: __init__.py  autoload_routes.py  logger.py  main.py  server.py
polyglot/vault_file/py/: README.md  pyproject.toml
polyglot/vault_file/py/__tests__/: __init__.py  conftest.py  test_api.py  test_core.py  test_domain.py  test_env_store.py  test_logger.py  test_sdk.py  test_validators.py
polyglot/vault_file/py/docs/: API_REFERENCE.md
polyglot/vault_file/py/examples/: Makefile  basic_usage.py
polyglot/vault_file/py/examples/fastapi_app/: main.py
polyglot/vault_file/py/src/vault_file/: __init__.py  core.py  domain.py  env_store.py  logger.py  protocols.py  sdk.py  sdk_types.py  validators.py
polyglot/vault_file/py/tests/: test_parity.py
(+200 files in other folders)
