[tool.poetry]
name = "mta-v800"
version = "0.1.0"
description = "Multi-tenant/Multi-app FastAPI orchestrator"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.12.5"
pydantic-settings = "^2.0.0"
pydantic-core = "^2.41.5"
typing-extensions = "^4.15.0"
annotated-types = "^0.7.0"
typing-inspection = "^0.4.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
httpx = "^0.28.1"
pyyaml = "^6.0"
aiohttp = "^3.13.2"
deepmerge = "^2.0"
# SQLAlchemy with async support - pinned to match reference implementation
sqlalchemy = {version = "==2.0.22", extras = ["asyncio"]}
# Async PostgreSQL driver
asyncpg = ">=0.30.0"
# Sync PostgreSQL driver (for alembic and fallback)
psycopg2-binary = "==2.9.9"
# Database migrations
alembic = ">=1.13.1"
# Redis client
redis = ">=4.5.0"
# Elasticsearch client
elasticsearch = ">=8.0.0"

# Local packages

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.28.1"
respx = "^0.22.0"
pytest-asyncio = "^1.3.0"
tomlkit = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["packages_py", "fastapi_apps", "fastapi_server"]
python_files = "test_*.py"
python_functions = "test_*"
norecursedirs = ["__STAGE__", "__SPECS__", "__REVIEW__", ".git", "node_modules", ".venv", "dist", "build"]
addopts = "--ignore=__STAGE__ --ignore=__SPECS__ --import-mode=importlib"
asyncio_mode = "auto"
