[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = "FastAPI Server with Polyglot Integration"
authors = ["Admin <admin@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
vault-file = {path = "../polyglot/vault_file/py", develop = true}
app-yaml-static-config = {path = "../polyglot/app_yaml_static_config/py", develop = true}
polyglot-server = {path = "../polyglot/server/py", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
