[project]
name = "app_yaml_overwrites"
version = "0.1.0"
description = "Unified Configuration SDK (Polyglot)"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
config-sdk = "app_yaml_overwrites.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["__tests__"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
