[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "runtime_template_resolver"
version = "0.1.0"
description = "Polyglot Runtime Template Resolver for Python"
authors = ["Admin <admin@example.com>"]
packages = [{include = "runtime_template_resolver", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.3.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
