[tool.poetry]
name = "polyglot-server"
version = "0.1.0"
description = "Polyglot Server Scaffolding (Python)"
authors = ["Admin <admin@example.com>"]
packages = [{include = "polyglot_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["__tests__"]
pythonpath = ["app"]
asyncio_mode = "auto"
